--- a/src/main/java/qb/login/view/RegistryView.fxml
+++ b/src/main/java/qb/login/view/RegistryView.fxml
@@ -4,17 +4,17 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="273.0" prefWidth="436.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="273.0" prefWidth="436.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="qb.login.controller.RegistryWinController">
    <children>
-      <GridPane layoutX="55.0" layoutY="50.0" prefHeight="150.0" prefWidth="308.0" AnchorPane.topAnchor="50.0">
+      <GridPane layoutY="23.0" prefHeight="177.0" prefWidth="363.0" AnchorPane.topAnchor="23.0">
         <columnConstraints>
-          <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="165.0" minWidth="10.0" prefWidth="89.0" />
-          <ColumnConstraints fillWidth="false" halignment="RIGHT" hgrow="SOMETIMES" maxWidth="261.0" minWidth="10.0" prefWidth="261.0" />
+          <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="165.0" minWidth="10.0" prefWidth="123.0" />
+          <ColumnConstraints fillWidth="false" halignment="RIGHT" hgrow="SOMETIMES" maxWidth="261.0" minWidth="10.0" prefWidth="240.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -22,17 +22,19 @@
          <children>
             <Label text="Логин:" />
             <Label text="Пароль:" GridPane.rowIndex="1" />
-            <Label text="Имя:" GridPane.rowIndex="2" />
-            <Label text="Фамилия:" GridPane.rowIndex="3" />
-            <Label text="Группа" GridPane.rowIndex="4" />
-            <TextField prefHeight="25.0" prefWidth="227.0" GridPane.columnIndex="1" />
-            <TextField prefHeight="25.0" prefWidth="227.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField prefHeight="25.0" prefWidth="227.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField prefHeight="25.0" prefWidth="227.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField prefHeight="25.0" prefWidth="227.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Label text="Пароль повторно:" GridPane.rowIndex="2" />
+            <Label text="Имя:" GridPane.rowIndex="3" />
+            <Label text="Фамилия:" GridPane.rowIndex="4" />
+            <Label text="Группа" GridPane.rowIndex="5" />
+            <TextField fx:id="loginField" prefHeight="25.0" prefWidth="227.0" promptText="Введите логин..." GridPane.columnIndex="1" />
+            <PasswordField fx:id="passwordField1" prefHeight="25.0" prefWidth="227.0" promptText="Введите пароль..." GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <PasswordField fx:id="passwordField2" prefHeight="25.0" prefWidth="227.0" promptText="Введите пароль повторно..." GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="firstNameField" prefHeight="25.0" prefWidth="227.0" promptText="Введите ваше имя..." GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="lastNameField" prefHeight="25.0" prefWidth="227.0" promptText="Введите вашу фамилию..." GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="groupNumField" prefHeight="25.0" prefWidth="227.0" promptText="Введите ваш номер группы..." GridPane.columnIndex="1" GridPane.rowIndex="5" />
          </children>
       </GridPane>
-      <Button layoutX="123.0" layoutY="218.0" mnemonicParsing="false" text="Зарегистрировать" />
-      <Button layoutX="255.0" layoutY="218.0" mnemonicParsing="false" text="Отмена" />
+      <Button layoutX="123.0" layoutY="218.0" mnemonicParsing="false" onAction="#handleOk" text="Зарегистрировать" />
+      <Button layoutX="255.0" layoutY="218.0" mnemonicParsing="false" onAction="#handleCancel" text="Отмена" />
    </children>
 </AnchorPane>
